grid spacing fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,21 +4,21 @@
 
 .gallery{
     display:grid;
-    grid-template-columns: repeat(auto-fit,20rem);
-    grid-row-gap: 20px;
-    margin:0 auto;
+    grid-template-columns: repeat(auto-fit,15rem);
     margin-top:50px;
-    width:90vw;
+    width:99vw;
     height: 90vh;
     justify-items: center;
     justify-content: center;
 }
 
-.search-wrap{
-    width:500px;
-    margin:0 auto;
-    margin-top:50px;
+img {
+    padding:0px;
+    margin:0px;
+    width:200px;
+    padding-left:0px;
 }
+
 #search{
     display:block;
     width:500px;
@@ -27,8 +27,8 @@
     border-radius:5px;
     margin:0 auto;
     margin-top:50px;
-    
 }
+
 .search-box::placeholder {
     color:lightgrey;
 }
